# gaveta

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: data-model.md  search.md  security-model.md
docs/adr/: ADR-001-cli-framework.md  ADR-002-persistence-and-time.md  ADR-003-secret-gate.md  ADR-004-local-classification.md  ADR-005-semantic-retrieval.md
src/gaveta/: __init__.py  __main__.py  cli.py  clipboard.py  commands.py  config.py  core.py  exit_codes.py  gate.py  mapping.py  models.py  paths.py  render.py  search.py  subcommands.py
src/gaveta/brain/: __init__.py  embed.py  heuristic.py  ollama.py  types.py
src/gaveta/db/: __init__.py  config.py  models.py  session.py  types.py
src/gaveta/db/migrations/: env.py
src/gaveta/db/migrations/versions/: 83e1b56e69e6_initial_schema.py  a1f2c3d4e5f6_add_fts5_search.py  b2c3d4e5f6a7_add_item_embeddings.py  e0e5bf21467f_add_content_column.py
tests/: conftest.py  test_architecture.py  test_brain.py  test_cli.py  test_clipboard.py  test_commands_cli.py  test_config.py  test_core.py  test_db_types.py  test_embed.py  test_entry_points.py  test_fusion.py  test_gate.py  test_gate_cli.py  test_migrations.py  test_models.py  test_package.py  test_paths.py  test_persistence_across_processes.py  test_render.py  test_search.py  test_vec0.py
tests/__snapshots__/: capture_request_schema.json  item_view_schema.json  search_hit_schema.json
tests/fixtures/: __init__.py  secret_corpus.py
