[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "gaveta-cli"
version = "0.4.0"
description = "Everything you need, right where you left it. A local-first, private knowledge drawer for developers."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Endy Bits" }]
keywords = ["cli", "knowledge-base", "local-first", "privacy", "notes"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  # The capture model and its JSON Schema, which is the machine contract every
  # later stage honors. Stage 7's FastAPI daemon requires pydantic regardless,
  # so this is pulled forward, not added. See docs/adr/ADR-001-cli-framework.md.
  "pydantic>=2",
  # Render layer only: it formats output and has no say in argument parsing.
  "rich>=13",
  # Persistence (Stage 2). The 2.0 typed ORM (`Mapped[...]` / `mapped_column`)
  # passes `mypy --strict` with no plugin, so there is no [tool.mypy] plugins entry.
  "sqlalchemy>=2.0",
  # Schema changes only via migrations, from the very first one. The migration
  # scripts live inside the package (src/gaveta/db/migrations/) so the wheel ships
  # them and an installed Gaveta can create its own database. See ADR-002.
  "alembic>=1.13",
  # Local classification (Stage 4): gaveta.brain POSTs to a local Ollama over HTTP.
  # httpx is importable *only* under gaveta/brain, and only to reach localhost — the
  # architecture test enforces both halves of that. Chosen over the ollama client for
  # per-request timeout control and a clean mock seam. See ADR-004.
  "httpx>=0.27",
  # Semantic retrieval (Stage 5): the sqlite-vec vector index. Ships prebuilt wheels
  # with the loadable extension binary. It imports no network library, so the fence
  # holds. It installs everywhere, but *loads* only where the Python sqlite3 was built
  # with extension loading enabled — where it cannot, retrieval degrades to FTS5-only
  # and this is dormant. See docs/adr/ADR-005-semantic-retrieval.md.
  "sqlite-vec>=0.1",
  # Clipboard for `gaveta f -c` (Stage 5): copies the best hit's payload. It shells out
  # to the platform clipboard and imports no network library, so the fence holds. Where
  # no clipboard backend exists (a headless CI runner), it raises and the seam prints the
  # payload instead — the fallback is the CI-tested path. See ADR-005.
  "pyperclip>=1",
]

[project.urls]
Homepage = "https://github.com/endybits/gaveta"
Repository = "https://github.com/endybits/gaveta"
Changelog = "https://github.com/endybits/gaveta/blob/main/CHANGELOG.md"

[project.scripts]
gaveta = "gaveta.cli:main"
# Short alias, same entry point. Capture is the hot path; `gv "text"` is less typing.
gv = "gaveta.cli:main"

# Mirrored in [dependency-groups] below. This table keeps the no-uv path
# (`pip install -e ".[dev]"`) working; uv reads the dependency group.
[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "mypy>=1.15",
  "ruff>=0.9",
  "pre-commit>=4",
  "commitizen>=4",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=6",
  "mypy>=1.15",
  "ruff>=0.9",
  "pre-commit>=4",
  "commitizen>=4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gaveta"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.11"

# sqlite-vec and pyperclip ship no py.typed marker or stubs. Each is imported in exactly
# one fenced place (gaveta.db.session and gaveta.clipboard); ignore their missing types
# rather than weaken strict mode everywhere.
[[tool.mypy.overrides]]
module = ["sqlite_vec", "pyperclip"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gaveta --cov-report=term-missing"

[tool.coverage.run]
source = ["gaveta"]

[tool.coverage.report]
# The floor, not the measured value. Stage 0 measures ~100% (a stub plus smoke
# tests); pinning it there would fail Stage 1's first real code by definition.
# This may only ever be raised at a stage close-out, never lowered.
# See the working agreement in IMPLEMENTATION_PLAN.md.
fail_under = 90
show_missing = true

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
